--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,5 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
 
     //Robolectric dependencies
-    testImplementation 'org.robolectric:robolectric:4.4'
+    testImplementation "org.robolectric:robolectric:4.8.1"
 }
