--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,17 @@ buildscript {
         google()
         jcenter()
     }
+    dependencies {
+        classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'com.android.tools.build:gradle:4.1.2'
+    }
 }
-plugins {
-    id 'com.android.application' version '7.2.0' apply false
-    id 'com.android.library' version '7.2.0' apply false
+allprojects {
+    repositories {
+        google()  // Google's Maven repository
+        jcenter()
+    }
 }
-
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
