--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,13 @@ dependencies {
     implementation 'org.parceler:parceler-api:1.1.12'
     annotationProcessor 'org.parceler:parceler:1.1.12'
     implementation 'com.google.firebase:firebase-database'
+    implementation platform('com.google.firebase:firebase-bom:30.1.0')
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-database'
+    implementation 'com.firebaseui:firebase-ui-database:7.1.1'
+    implementation 'com.google.firebase:firebase-auth'
+
+
 
 
 
@@ -74,3 +81,4 @@ dependencies {
 }
 
 apply plugin: 'com.google.gms.google-services'
+
